--- a/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
+++ b/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
@@ -69,9 +69,9 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-lg-1 pe-0 d-none d-lg-block">&nbsp;</div>
+<div class="row statistics-row">
+  <div class="col-md-1 px-0 d-none d-lg-block">&nbsp;</div>
   <div class="col-md-12 col-lg-11 px-2 px-sm-0">
-    <home-statistics [statistics]="statistics" [decimalFormat]="getDecimalFormat(sensorType)" [valuePostfix]="getValuePostFix(sensorType)" [additionalClasses]="{'activated': showChart}"></home-statistics>
+    <home-statistics [statistics]="statistics" [decimalFormat]="getDecimalFormat(sensorType)" [additionalClasses]="{'activated': showChart}"></home-statistics>
   </div>
 </div>
