--- a/src/app/energie-verbruik/energie-verbruik.component.html
+++ b/src/app/energie-verbruik/energie-verbruik.component.html
@@ -1,128 +1,142 @@
-<div class="row">
-  <div class="col-lg-1 pe-0 d-none d-lg-block">&nbsp;</div>
+<main>
+  <div class="row">
+    <div class="col-lg-1 pe-0 d-none d-lg-block">&nbsp;</div>
 
-  <div class="col-md-12 col-lg-11 px-0 d-none d-lg-block">
-    <ul class="nav nav-tabs">
-      <li class="nav-item me-1">
-        <a class="nav-link clickable" [ngClass]="{'active': periode === 'uur'}" (click)="setPeriode('uur')">Uur</a>
-      </li>
-      <li class="nav-item me-1">
-        <a class="nav-link clickable" [ngClass]="{'active': periode === 'dag'}" (click)="setPeriode('dag')">Dag</a>
-      </li>
-      <li class="nav-item me-1">
-        <a class="nav-link clickable" [ngClass]="{'active': periode === 'maand'}" (click)="setPeriode('maand')">Maand</a>
-      </li>
-      <li class="nav-item me-0">
-        <a class="nav-link clickable" [ngClass]="{'active': periode === 'jaar'}" (click)="setPeriode('jaar')">Jaar</a>
-      </li>
+    <div class="col-md-12 col-lg-11 px-0 d-none d-lg-block">
+      <ul class="nav nav-tabs">
+        <li class="nav-item me-1">
+          <a class="nav-link clickable" [ngClass]="{'active': periode === 'uur'}" (click)="setPeriode('uur')">Uur</a>
+        </li>
+        <li class="nav-item me-1">
+          <a class="nav-link clickable" [ngClass]="{'active': periode === 'dag'}" (click)="setPeriode('dag')">Dag</a>
+        </li>
+        <li class="nav-item me-1">
+          <a class="nav-link clickable" [ngClass]="{'active': periode === 'maand'}" (click)="setPeriode('maand')">Maand</a>
+        </li>
+        <li class="nav-item me-0">
+          <a class="nav-link clickable" [ngClass]="{'active': periode === 'jaar'}" (click)="setPeriode('jaar')">Jaar</a>
+        </li>
 
-      <li class="ms-auto me-auto">
-        <div class="btn-group btn-group-toggle">
-          <input type="checkbox" class="btn-check" [checked]="isEnergieSoortSelected('stroom')">
-          <label class="btn btn-outline-secondary electricity-gas-toggle-button" [ngClass]="{'active': isEnergieSoortSelected('stroom')}"
-                 (click)="toggleEnergiesoort('stroom')">
-            <fa-icon [icon]="faPlugCircleBolt"></fa-icon> Stroom
-          </label>
+        <li class="ms-auto me-auto">
+          <div class="btn-group btn-group-toggle">
+            <input type="checkbox" class="btn-check" [checked]="isEnergieSoortSelected('stroom')">
+            <label class="btn btn-outline-secondary electricity-gas-toggle-button" [ngClass]="{'active': isEnergieSoortSelected('stroom')}"
+                   (click)="toggleEnergiesoort('stroom')">
+              <fa-icon [icon]="faPlugCircleBolt"></fa-icon> Stroom
+            </label>
 
-          <input type="checkbox" class="btn-check" [checked]="isEnergieSoortSelected('gas')">
-          <label class="btn btn-outline-secondary electricity-gas-toggle-button" [ngClass]="{'active': isEnergieSoortSelected('gas')}"
-                 (click)="toggleEnergiesoort('gas')">
-            <fa-icon [icon]="faFireFlameCurved"></fa-icon> Gas
-          </label>
-        </div>
-      </li>
-      <li>
-        <home-date-navigator *ngIf="dateNavigatorMode !== 'off'" [mode]="dateNavigatorMode" [selectedDate]="selectedDate"
-                             (navigation)="onDateNavigate($event)" class="input-group"></home-date-navigator>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<!-- Up to (but excluding) large -->
-<div class="d-xs-block d-lg-none">
-
-  <!-- Kostensoort selection -->
-  <div class="row mb-2">
-    <div class="col-6 ps-2 pe-1 ps-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': verbruiksoort === 'verbruik'}"
-              (click)="setVerbruikSoort('verbruik')">Verbruik</button>
-    </div>
-    <div class="col-6 ps-1 pe-2 pe-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': verbruiksoort === 'kosten'}"
-              (click)="setVerbruikSoort('kosten')"> Kosten</button>
+            <input type="checkbox" class="btn-check" [checked]="isEnergieSoortSelected('gas')">
+            <label class="btn btn-outline-secondary electricity-gas-toggle-button" [ngClass]="{'active': isEnergieSoortSelected('gas')}"
+                   (click)="toggleEnergiesoort('gas')">
+              <fa-icon [icon]="faFireFlameCurved"></fa-icon> Gas
+            </label>
+          </div>
+        </li>
+        <li>
+          <home-date-navigator *ngIf="dateNavigatorMode !== 'off'" [mode]="dateNavigatorMode" [selectedDate]="selectedDate"
+                               (navigation)="onDateNavigate($event)" class="input-group"></home-date-navigator>
+        </li>
+      </ul>
     </div>
   </div>
 
-  <!-- Energiesoort selection  -->
-  <div class="row mb-2">
-    <div class="col-6 ps-2 pe-1 ps-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': isEnergieSoortSelected('stroom')}"
-              (click)="toggleEnergiesoort('stroom')"><fa-icon [icon]="faPlugCircleBolt"></fa-icon> Stroom</button>
+  <!-- Up to (but excluding) large -->
+  <div class="d-xs-block d-lg-none">
+
+    <!-- Kostensoort selection -->
+    <div class="row mb-2">
+      <div class="col-6 ps-2 pe-1 ps-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': verbruiksoort === 'verbruik'}"
+                (click)="setVerbruikSoort('verbruik')">Verbruik</button>
+      </div>
+      <div class="col-6 ps-1 pe-2 pe-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': verbruiksoort === 'kosten'}"
+                (click)="setVerbruikSoort('kosten')"> Kosten</button>
+      </div>
     </div>
-    <div class="col-6 ps-1 pe-2 pe-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': isEnergieSoortSelected('gas')}"
-              (click)="toggleEnergiesoort('gas')"><fa-icon [icon]="faFireFlameCurved"></fa-icon> Gas</button>
+
+    <!-- Energiesoort selection  -->
+    <div class="row mb-2">
+      <div class="col-6 ps-2 pe-1 ps-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': isEnergieSoortSelected('stroom')}"
+                (click)="toggleEnergiesoort('stroom')"><fa-icon [icon]="faPlugCircleBolt"></fa-icon> Stroom</button>
+      </div>
+      <div class="col-6 ps-1 pe-2 pe-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': isEnergieSoortSelected('gas')}"
+                (click)="toggleEnergiesoort('gas')"><fa-icon [icon]="faFireFlameCurved"></fa-icon> Gas</button>
+      </div>
+    </div>
+
+    <!-- Period selection  -->
+    <div class="row mb-2">
+      <div class="col-3 ps-2 pe-1 ps-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'uur'}" (click)="setPeriode('uur')">Uur</button>
+      </div>
+      <div class="col-3 px-1 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'dag'}" (click)="setPeriode('dag')">Dag</button>
+      </div>
+      <div class="col-3 px-1 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'maand'}" (click)="setPeriode('maand')">Maand</button>
+      </div>
+      <div class="col-3 ps-1 pe-2 pe-sm-0 d-grid">
+        <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'jaar'}" (click)="setPeriode('jaar')">Jaar</button>
+      </div>
+    </div>
+
+    <!-- Date selection  -->
+    <div class="row mb-2 px-2 px-sm-0">
+      <home-date-navigator *ngIf="dateNavigatorMode !== 'off'" [mode]="dateNavigatorMode" [selectedDate]="selectedDate"
+                           [responsiveSize]="true" (navigation)="onDateNavigate($event)"
+                           class="input-group input-group-sm ps-0 pe-0"></home-date-navigator>
     </div>
   </div>
 
-  <!-- Period selection  -->
-  <div class="row mb-2">
-    <div class="col-3 ps-2 pe-1 ps-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'uur'}" (click)="setPeriode('uur')">Uur</button>
+  <div class="row">
+    <div class="col-md-1 px-0 d-none d-lg-block">
+      <ul class="nav nav-tabs-left flex-column">
+        <li class="nav-item">
+          <a class="nav-link mb-1 clickable" [ngClass]="{'active': verbruiksoort === 'verbruik'}" (click)="setVerbruikSoort('verbruik')">Verbruik</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mb-0 clickable" [ngClass]="{'active': verbruiksoort === 'kosten'}" (click)="setVerbruikSoort('kosten')">Kosten</a>
+        </li>
+      </ul>
     </div>
-    <div class="col-3 px-1 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'dag'}" (click)="setPeriode('dag')">Dag</button>
-    </div>
-    <div class="col-3 px-1 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'maand'}" (click)="setPeriode('maand')">Maand</button>
-    </div>
-    <div class="col-3 ps-1 pe-2 pe-sm-0 d-grid">
-      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': periode === 'jaar'}" (click)="setPeriode('jaar')">Jaar</button>
-    </div>
-  </div>
 
-  <!-- Date selection  -->
-  <div class="row mb-2 px-2 px-sm-0">
-    <home-date-navigator *ngIf="dateNavigatorMode !== 'off'" [mode]="dateNavigatorMode" [selectedDate]="selectedDate"
-                         [responsiveSize]="true" (navigation)="onDateNavigate($event)"
-                         class="input-group input-group-sm ps-0 pe-0"></home-date-navigator>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-1 px-0 d-none d-lg-block">
-    <ul class="nav nav-tabs-left flex-column">
-      <li class="nav-item">
-        <a class="nav-link mb-1 clickable" [ngClass]="{'active': verbruiksoort === 'verbruik'}" (click)="setVerbruikSoort('verbruik')">Verbruik</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link mb-0 clickable" [ngClass]="{'active': verbruiksoort === 'kosten'}" (click)="setVerbruikSoort('kosten')">Kosten</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="col-md-12 col-lg-11 px-2 px-sm-0">
-    <div [hidden]="!showChart" id="chart" class="c3 graph-chart"></div>
-    <div [hidden]="!showTable" class="table-responsive">
-      <table class="table table-bordered table-striped table-hover table-sm">
-        <thead>
+    <div class="col-md-12 col-lg-11 px-2 px-sm-0">
+      <div [hidden]="!showChart" id="chart" class="c3 graph-chart"></div>
+      <div [hidden]="!showTable" class="table-responsive">
+        <table class="table table-bordered table-striped table-hover table-sm">
+          <thead>
           <tr>
             <th></th>
             <th class="text-end" *ngIf="isEnergieSoortSelected('gas')">Gas</th>
             <th class="text-end" *ngIf="isEnergieSoortSelected('stroom')">Stroom</th>
             <th class="text-end" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort === 'kosten'">Totaal</th>
           </tr>
-        </thead>
-        <tbody>
+          </thead>
+          <tbody>
           <tr *ngFor="let verbruik of verbruiken" class="clickable" (click)="navigateToDetailsOfVerbruik(verbruik)">
-            <td class="text-end">{{ getFormattedDate(verbruik) }}</td>
-            <td class="text-end" *ngIf="isEnergieSoortSelected('gas')">{{ getFormattedValue(verbruik, 'gas') }}</td>
-            <td class="text-end" *ngIf="isEnergieSoortSelected('stroom')">{{ getFormattedValue(verbruik, 'stroom') }}</td>
-            <td class="text-end" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort === 'kosten'">{{ getFormattedTotalCosts(verbruik) }}</td>
+            <td class="font-monospace text-end">{{ getFormattedDate(verbruik) }}</td>
+            <td class="font-monospace text-end" *ngIf="isEnergieSoortSelected('gas')">{{ getFormattedValue(verbruik, 'gas') }}</td>
+            <td class="font-monospace text-end" *ngIf="isEnergieSoortSelected('stroom')">{{ getFormattedValue(verbruik, 'stroom') }}</td>
+            <td class="font-monospace text-end" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort === 'kosten'">{{ getFormattedTotalCosts(verbruik) }}</td>
           </tr>
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
+
+  <footer class="sticky-footer">
+    <div class="row statistics-row">
+      <div class="col-md-1 px-0 d-none d-lg-block">&nbsp;</div>
+      <div class="col-md-12 col-lg-11 px-2 px-sm-0 position-sticky">
+        <home-statistics [statistics]="statistics"
+                         [decimalFormat]="getDecimalFormat()"
+                         [additionalClasses]="{'activated': showChart}">
+        </home-statistics>
+      </div>
+    </div>
+  </footer>
+</main>
