--- a/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
+++ b/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
@@ -49,9 +49,9 @@
             </thead>
             <tbody>
             <tr *ngFor="let klimaat of lowestKlimaats; let index = index" (click)="navigateToDetailsOfDate(klimaat.dateTime)" class="clickable">
-              <td class="text-end">{{ index + 1 }}.</td>
-              <td class="text-end">{{ klimaat.dateTime.toDate() | date: 'dd-MM-yyyy HH:mm:ss'}}</td>
-              <td class="text-end">{{ klimaat[sensorType] | number: getDecimalFormat(sensorType) }}{{ getValuePostFix(sensorType) }}</td>
+              <td class="font-monospace text-end">{{ index + 1 }}.</td>
+              <td class="font-monospace text-end">{{ klimaat.dateTime.toDate() | date: 'dd-MM-yyyy HH:mm:ss'}}</td>
+              <td class="font-monospace text-end">{{ klimaat[sensorType] | number: getDecimalFormat(sensorType) }}{{ ' ' + getValuePostFix(sensorType) }}</td>
             </tr>
             </tbody>
           </table>
@@ -77,9 +77,9 @@
             </thead>
             <tbody>
             <tr *ngFor="let klimaat of highestKlimaats; let index = index" (click)="navigateToDetailsOfDate(klimaat.dateTime)" class="clickable">
-              <td class="text-end">{{ index + 1 }}.</td>
-              <td class="text-end">{{ klimaat.dateTime.toDate() | date: 'dd-MM-yyyy HH:mm:ss'}}</td>
-              <td class="text-end">{{ klimaat[sensorType] | number: '1.2-2' }}{{ getValuePostFix(sensorType) }}</td>
+              <td class="font-monospace text-end">{{ index + 1 }}.</td>
+              <td class="font-monospace text-end">{{ klimaat.dateTime.toDate() | date: 'dd-MM-yyyy HH:mm:ss'}}</td>
+              <td class="font-monospace text-end">{{ klimaat[sensorType] | number: '1.2-2' }}{{ ' ' + getValuePostFix(sensorType) }}</td>
             </tr>
             </tbody>
           </table>
