--- a/src/app/meterstand/meterstand.component.html
+++ b/src/app/meterstand/meterstand.component.html
@@ -20,11 +20,11 @@
     </thead>
     <tbody>
       <tr *ngFor="let meterstandOpDag of sortedMeterstandenPerDag">
-        <td class="text-end">{{meterstandOpDag.dag | date : 'EEE.'}}</td>
-        <td class="text-nowrap">{{meterstandOpDag.dag | date : 'dd-MM-yyyy'}}</td>
-        <td class="text-end">{{meterstandOpDag.meterstand?.stroomTarief1 | number: '1.3-3'}}</td>
-        <td class="text-end">{{meterstandOpDag.meterstand?.stroomTarief2 | number: '1.3-3'}}</td>
-        <td class="text-end">{{meterstandOpDag.meterstand?.gas | number: '1.3-3'}}</td>
+        <td class="font-monospace text-end">{{meterstandOpDag.dag | date : 'EEE.'}}</td>
+        <td class="font-monospace text-nowrap">{{meterstandOpDag.dag | date : 'dd-MM-yyyy'}}</td>
+        <td class="font-monospace text-end">{{meterstandOpDag.meterstand?.stroomTarief1 | number: '1.3-3'}}</td>
+        <td class="font-monospace text-end">{{meterstandOpDag.meterstand?.stroomTarief2 | number: '1.3-3'}}</td>
+        <td class="font-monospace text-end">{{meterstandOpDag.meterstand?.gas | number: '1.3-3'}}</td>
       </tr>
     </tbody>
   </table>
