--- a/src/app/chart/statistics/statistics.component.html
+++ b/src/app/chart/statistics/statistics.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="statistics" class="row no-gutters pt-2 pb-3 text-center" [ngClass]="additionalClasses">
+<div *ngIf="statistics" class="row no-gutters pt-2 pb-3 text-center rounded-bottom" [ngClass]="additionalClasses">
   <table class="d-xs-table d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none">
     <tr>
       <td>
