--- a/src/app/klimaat/klimaat-average/klimaat-average.component.html
+++ b/src/app/klimaat/klimaat-average/klimaat-average.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-3">
+<div class="container mb-3 px-0">
   <div class="row">
     <div class="offset-lg-2 col-md-4 col-lg-2 mb-2">
       <div class="btn-group btn-group-toggle d-flex">
