--- a/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
+++ b/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-3">
+<div class="container mb-3 px-0">
   <div class="row">
     <div class="col-md-3 mb-2">
       <div class="btn-group btn-group-toggle d-flex">
