Simplify min and max

--- a/src/app/chart/statistics/statistics.component.html
+++ b/src/app/chart/statistics/statistics.component.html
@@ -8,7 +8,7 @@
         <span class="badge w-100 badge-statistics-max">Max: <span class="text-nowrap">{{ format(statistics.max) }}</span></span>
       </td>
       <td>
-        <span class="badge w-100 badge-statistics-avg">Gem.: <span class="text-nowrap">{{ format(statistics.avg) }}</span></span>
+        <span class="badge w-100 badge-statistics-avg">Gem: <span class="text-nowrap">{{ format(statistics.avg) }}</span></span>
       </td>
     </tr>
   </table>
@@ -22,7 +22,7 @@
         <span class="badge w-75 badge-statistics-max">Max: <span class="text-nowrap">{{ format(statistics.max) }}</span></span>
       </td>
       <td>
-        <span class="badge w-75 badge-statistics-avg">Gem.: <span class="text-nowrap">{{ format(statistics.avg) }}</span></span>
+        <span class="badge w-75 badge-statistics-avg">Gem: <span class="text-nowrap">{{ format(statistics.avg) }}</span></span>
       </td>
     </tr>
   </table>
