--- a/src/app/date-navigator/date-navigator.component.scss
+++ b/src/app/date-navigator/date-navigator.component.scss
@@ -1,6 +1,6 @@
-@import "~bootstrap/scss/functions.scss";
-@import "~bootstrap/scss/variables.scss";
-@import "~bootstrap/scss/mixins/breakpoints.scss";
+@import "bootstrap/scss/functions.scss";
+@import "bootstrap/scss/variables.scss";
+@import "bootstrap/scss/mixins/breakpoints.scss";
 
 .date-navigator-form {
   width: inherit;
